# graphicLabs

./: CMakeLists.txt  FigureModel.cpp  FigureModel.h  GraphController.cpp  GraphController.h  SFMLView.cpp  SFMLView.h  main.cpp
